--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,18 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta property="og:title" content="Fitness App" />
+    <meta property="og:image" content="./preview.png" />
+    <meta property="og:description" content="Fitness App" />
+    <meta property="og:url" content="https://nok-fitness.netlify.app/" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
+
     <title>Nok fitness</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
   </body>
 </html>
