--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <meta property="og:title" content="Fitness App" />
-    <meta property="og:image" content="./preview.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image:url" content="./preview.png" />
     <meta property="og:description" content="Fitness App" />
     <meta property="og:url" content="https://nok-fitness.netlify.app/" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
