Change og image url to absolute path

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="Fitness App" />
     <meta property="og:type" content="website" />
-    <meta property="og:image:url" content="%PUBLIC_URL%/preview.png" />
+    <meta property="og:image:url" content="https://nok-fitness.netlify.app/preview.png" />
     <meta property="og:description" content="Fitness App" />
     <meta property="og:url" content="https://nok-fitness.netlify.app/" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
