--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Fitness App" />
     <meta property="og:type" content="website" />
     <meta
-      property="og:image:url"
+      property="og:image"
       content="https://nok-fitness.netlify.app/public/preview.png"
     />
     <meta property="og:description" content="Fitness App" />
