--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://imgur.com/a/AsWjPF2"
+      content="https://i.imgur.com/vr6OqPO.png"
     />
     <meta property="og:description" content="Fitness App" />
     <meta property="og:url" content="https://nok-fitness.netlify.app/" />
